k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-project-app
spec:
  replicas: 4
  selector:
    matchLabels:
      env: prod
  template:
    metadata:
      labels:
        env: prod
    spec:
      containers:
        - name: otus-project-app
          image: rooover/otus_hw_2_v_01:27_02_24
          ports:
            - name: http
              containerPort: 8000
