k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-project-app
spec:
  selector:
    env: prod
  ports:
    - port: 8000
      targetPort: http
  type: ClusterIP
